employees-svc/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employees-ingress
  namespace: micronaut-k8s
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$0
spec:
  defaultBackend:
    service:
      name: employees-ui
      port:
        number: 80
  rules:
    - host: employees-app
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: employees-svc
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: employees-svc
                port:
                  number: 8080
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: employees-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employees-ui
                port:
                  number: 80
